// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SearchUser] interaction with Profile Modal show changged state when press add and delete button on profile modal 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityViewIsModal={true}
    importantForAccessibility="yes"
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0,0,0,0)",
          "zIndex": 2,
        },
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableWithoutFeedback>
        <View
          importantForAccessibility="no"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.075,
                },
              ]
            }
          />
        </View>
      </TouchableWithoutFeedback>
      <View
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "height": 320,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "translateY": -1334,
              },
              Object {
                "translateX": 0,
              },
            ],
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#1E6EFA",
              "height": 300,
              "justifyContent": "space-between",
              "marginHorizontal": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginTop": 40,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
            >
              <Image
                source={
                  Object {
                    "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                  }
                }
                style={
                  Array [
                    Object {
                      "borderRadius": 40,
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "alignSelf": "center",
                    },
                  ]
                }
              />
            </TouchableOpacity>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "marginTop": 16,
                    "paddingBottom": 0,
                    "paddingLeft": 32,
                    "paddingRight": 32,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              admin
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 12,
                    "marginTop": 8,
                  },
                ]
              }
            >
              online
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-ad-friend"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#676c7a",
                        "fontSize": 16,
                      },
                    ]
                  }
                  testID="btn-ad-title"
                >
                  Add
                </Text>
              </View>
            </TouchableOpacity>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#676c7a",
                    "height": 48,
                    "width": 0.5,
                  },
                ]
              }
            />
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-chat"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#676c7a",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2F38C7",
                      },
                    ]
                  }
                >
                  Chat
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "canInstrument": true,
          "createTransformer": [Function],
          "getCacheKey": [Function],
          "process": [Function],
        }
      }
      style={
        Array [
          Object {
            "height": 110,
            "width": 116,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#676c7a",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 24,
            "marginBottom": 2,
            "marginTop": 16,
          },
        ]
      }
    >
      Error occured.
    </Text>
    <Text
      style={
        Array [
          Object {
            "alignItems": "center",
            "color": "#8f94a3",
            "display": "flex",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": -0.25,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Network error: Unexpected end of JSON input
    </Text>
    <TouchableOpacity
      activeOpacity={0.2}
      style={
        Object {
          "backgroundColor": "#1E6EFA",
          "flexDirection": "row",
          "height": 52,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "borderColor": "blue",
              "flexDirection": "row",
              "height": 52,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#1E6EFA",
              "height": 48,
              "width": 156,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#069ccd",
                "fontSize": 16,
              },
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "fontWeight": "bold",
              },
            ]
          }
        >
          Try again
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`[SearchUser] interaction with Profile Modal show changged state when press add and delete button on profile modal 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityViewIsModal={true}
    importantForAccessibility="yes"
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0,0,0,0)",
          "zIndex": 2,
        },
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableWithoutFeedback>
        <View
          importantForAccessibility="no"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.075,
                },
              ]
            }
          />
        </View>
      </TouchableWithoutFeedback>
      <View
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "height": 320,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "translateY": -1334,
              },
              Object {
                "translateX": 0,
              },
            ],
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#1E6EFA",
              "height": 300,
              "justifyContent": "space-between",
              "marginHorizontal": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginTop": 40,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
            >
              <Image
                source={
                  Object {
                    "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "alignSelf": "center",
                    },
                  ]
                }
              />
            </TouchableOpacity>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "marginTop": 16,
                    "paddingBottom": 0,
                    "paddingLeft": 32,
                    "paddingRight": 32,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              admin
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 12,
                    "marginTop": 8,
                  },
                ]
              }
            >
              online
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-ad-friend"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#676c7a",
                        "fontSize": 16,
                      },
                    ]
                  }
                  testID="btn-ad-title"
                >
                  Add
                </Text>
              </View>
            </TouchableOpacity>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#676c7a",
                    "height": 48,
                    "width": 0.5,
                  },
                ]
              }
            />
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-chat"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#676c7a",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2F38C7",
                      },
                    ]
                  }
                >
                  Chat
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexBasis": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "paddingBottom": 0,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "canInstrument": true,
          "createTransformer": [Function],
          "getCacheKey": [Function],
          "process": [Function],
        }
      }
      style={
        Array [
          Object {
            "height": 110,
            "width": 116,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#676c7a",
            "fontSize": 16,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "lineHeight": 24,
            "marginBottom": 2,
            "marginTop": 16,
          },
        ]
      }
    >
      Error occured.
    </Text>
    <Text
      style={
        Array [
          Object {
            "alignItems": "center",
            "color": "#8f94a3",
            "display": "flex",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": -0.25,
            "lineHeight": 20,
            "textAlign": "center",
          },
        ]
      }
    >
      Network error: Unexpected end of JSON input
    </Text>
    <TouchableOpacity
      activeOpacity={0.2}
      style={
        Object {
          "backgroundColor": "#1E6EFA",
          "flexDirection": "row",
          "height": 52,
          "justifyContent": "center",
          "marginTop": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "borderColor": "blue",
              "flexDirection": "row",
              "height": 52,
              "justifyContent": "center",
            },
            Object {
              "backgroundColor": "#1E6EFA",
              "height": 48,
              "width": 156,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#069ccd",
                "fontSize": 16,
              },
              Object {
                "color": "#ffffff",
                "fontSize": 14,
                "fontWeight": "bold",
              },
            ]
          }
        >
          Try again
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`[SearchUser] interaction with Profile Modal show profile modal when press user in search user list 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityViewIsModal={true}
    importantForAccessibility="yes"
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0,0,0,0)",
          "zIndex": 2,
        },
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <TouchableWithoutFeedback>
        <View
          importantForAccessibility="no"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.075,
                },
              ]
            }
          />
        </View>
      </TouchableWithoutFeedback>
      <View
        style={
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "height": 320,
            "justifyContent": "center",
            "transform": Array [
              Object {
                "translateY": -1334,
              },
              Object {
                "translateX": 0,
              },
            ],
            "width": "90%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#1E6EFA",
              "height": 300,
              "justifyContent": "space-between",
              "marginHorizontal": 20,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "marginTop": 40,
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
            >
              <Image
                source={
                  Object {
                    "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 80,
                      "width": 80,
                    },
                    Object {
                      "alignSelf": "center",
                    },
                  ]
                }
              />
            </TouchableOpacity>
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 24,
                    "fontWeight": "bold",
                    "marginTop": 16,
                    "paddingBottom": 0,
                    "paddingLeft": 32,
                    "paddingRight": 32,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              admin
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "color": "white",
                    "fontSize": 12,
                    "marginTop": 8,
                  },
                ]
              }
            >
              online
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#ffffff",
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-ad-friend"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#676c7a",
                        "fontSize": 16,
                      },
                    ]
                  }
                  testID="btn-ad-title"
                >
                  Add
                </Text>
              </View>
            </TouchableOpacity>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#676c7a",
                    "height": 48,
                    "width": 0.5,
                  },
                ]
              }
            />
            <TouchableOpacity
              activeOpacity={0.5}
              style={
                Object {
                  "alignItems": "center",
                  "height": 80,
                  "justifyContent": "center",
                  "width": "50%",
                }
              }
              testID="btn-chat"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "height": 80,
                    "justifyContent": "center",
                    "width": "50%",
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#676c7a",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2F38C7",
                      },
                    ]
                  }
                >
                  Chat
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
  <SafeAreaView
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 50,
              "justifyContent": "center",
              "marginBottom": 4,
              "overflow": "hidden",
              "width": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 50,
                "justifyContent": "center",
                "paddingBottom": 0,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 0,
                "width": "100%",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            defaultValue=""
            multiline={false}
            rejectResponderTermination={true}
            selectionColor="#151A25"
            style={
              Array [
                Object {
                  "backgroundColor": "#f3f9ff",
                  "borderRadius": 4,
                  "color": "#151A25",
                  "height": 36,
                  "paddingLeft": 40,
                  "paddingRight": 10,
                  "width": "100%",
                },
              ]
            }
            testID="text-input"
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            source={
              Object {
                "canInstrument": true,
                "createTransformer": [Function],
                "getCacheKey": [Function],
                "process": [Function],
              }
            }
            style={
              Array [
                Object {
                  "height": 20,
                  "left": 30,
                  "position": "absolute",
                  "width": 20,
                },
              ]
            }
          />
        </View>
      </View>
      <ScrollView
        ListEmptyComponent={
          <Shared
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            No content
          </Shared>
        }
        data={
          Array [
            Object {
              "authType": "",
              "birthday": "",
              "email": "",
              "gender": 0,
              "id": "1",
              "isOnline": true,
              "lastSignedIn": "",
              "name": "admin",
              "nickname": "admin",
              "phone": "",
              "photoURL": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
              "socialId": "",
              "statusMessage": "online",
              "thumbURL": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
              "verified": "",
            },
            Object {
              "authType": "",
              "birthday": "",
              "email": "",
              "gender": 0,
              "id": "2",
              "isOnline": false,
              "lastSignedIn": "",
              "name": "admin",
              "nickname": "geoseong",
              "phone": "",
              "photoURL": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
              "socialId": "",
              "statusMessage": "offline",
              "thumbURL": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
              "verified": "",
            },
            Object {
              "authType": "",
              "birthday": "",
              "email": "",
              "gender": 0,
              "id": "3",
              "isOnline": false,
              "lastSignedIn": "",
              "name": "admin",
              "nickname": "hyochan",
              "phone": "",
              "photoURL": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
              "socialId": "",
              "statusMessage": "offline",
              "thumbURL": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
              "verified": "",
            },
            Object {
              "authType": "",
              "birthday": "",
              "email": "",
              "gender": 0,
              "id": "4",
              "isOnline": true,
              "lastSignedIn": "",
              "name": "admin",
              "nickname": "mars",
              "phone": "",
              "photoURL": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
              "socialId": "",
              "statusMessage": "offline",
              "thumbURL": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
              "verified": "",
            },
            Object {
              "authType": "",
              "birthday": "",
              "email": "",
              "gender": 0,
              "id": "5",
              "isOnline": true,
              "lastSignedIn": "",
              "name": "admin",
              "nickname": "gordon",
              "phone": "",
              "photoURL": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
              "socialId": "",
              "statusMessage": "offline",
              "thumbURL": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
              "verified": "",
            },
            Object {
              "authType": "",
              "birthday": "",
              "email": "",
              "gender": 0,
              "id": "6",
              "isOnline": false,
              "lastSignedIn": "",
              "name": "admin",
              "nickname": "hyochan2",
              "phone": "",
              "photoURL": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
              "socialId": "",
              "statusMessage": "offline",
              "thumbURL": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
              "verified": "",
            },
          ]
        }
        disableVirtualization={false}
        horizontal={false}
        initialNumToRender={10}
        maxToRenderPerBatch={10}
        numColumns={1}
        onEndReachedThreshold={2}
        removeClippedSubviews={false}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        style={
          Object {
            "height": "100%",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "100%",
          }
        }
        testID="animated-flatlist"
        testObj={
          Object {
            "scrollY": 0,
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="user-list-item0"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "#e2f2ff",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/45788556?s=200&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#151A25",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginLeft": 12,
                        "width": 200,
                      },
                    ]
                  }
                >
                  admin
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "#d3d8e8",
                        "borderWidth": 0.3,
                        "color": "#1E6EFA",
                        "fontSize": 12,
                        "maxWidth": 120,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  online
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="user-list-item1"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "#e2f2ff",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/19166187?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#151A25",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginLeft": 12,
                        "width": 200,
                      },
                    ]
                  }
                >
                  geoseong
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "#d3d8e8",
                        "borderWidth": 0.3,
                        "color": "#1E6EFA",
                        "fontSize": 12,
                        "maxWidth": 120,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="user-list-item2"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "#e2f2ff",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars2.githubusercontent.com/u/27461460?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#151A25",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginLeft": 12,
                        "width": 200,
                      },
                    ]
                  }
                >
                  hyochan
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "#d3d8e8",
                        "borderWidth": 0.3,
                        "color": "#1E6EFA",
                        "fontSize": 12,
                        "maxWidth": 120,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="user-list-item3"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "#e2f2ff",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars0.githubusercontent.com/u/6101260?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#151A25",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginLeft": 12,
                        "width": 200,
                      },
                    ]
                  }
                >
                  mars
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "#d3d8e8",
                        "borderWidth": 0.3,
                        "color": "#1E6EFA",
                        "fontSize": 12,
                        "maxWidth": 120,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="user-list-item4"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "#e2f2ff",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://avatars0.githubusercontent.com/u/10363850?s=460&v=4",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#151A25",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginLeft": 12,
                        "width": 200,
                      },
                    ]
                  }
                >
                  gordon
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "#d3d8e8",
                        "borderWidth": 0.3,
                        "color": "#1E6EFA",
                        "fontSize": 12,
                        "maxWidth": 120,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "width": "100%",
                },
              ]
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              testID="user-list-item5"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderBottomWidth": 1,
                      "borderColor": "#e2f2ff",
                      "flexDirection": "row",
                      "height": 80,
                      "justifyContent": "flex-start",
                      "paddingBottom": 0,
                      "paddingLeft": 20,
                      "paddingRight": 20,
                      "paddingTop": 0,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://i.ytimg.com/vi/NgKSEvqzYvo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAWBWqCeP5oTwaB6XMRGXEhvbIiIA",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                />
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#151A25",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "marginLeft": 12,
                        "width": 200,
                      },
                    ]
                  }
                >
                  hyochan2
                </Text>
                <Text
                  style={
                    Array [
                      Object {
                        "borderColor": "#d3d8e8",
                        "borderWidth": 0.3,
                        "color": "#1E6EFA",
                        "fontSize": 12,
                        "maxWidth": 120,
                        "paddingBottom": 4,
                        "paddingLeft": 8,
                        "paddingRight": 8,
                        "paddingTop": 4,
                        "position": "absolute",
                        "right": 20,
                      },
                    ]
                  }
                >
                  offline
                </Text>
              </View>
            </TouchableOpacity>
          </View>
        </View>
      </ScrollView>
    </View>
  </SafeAreaView>
</View>
`;

exports[`[SearchUser] rendering test renders error view 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 50,
                "justifyContent": "center",
                "marginBottom": 4,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "center",
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              defaultValue=""
              multiline={false}
              rejectResponderTermination={true}
              selectionColor="#151A25"
              style={
                Array [
                  Object {
                    "backgroundColor": "#f3f9ff",
                    "borderRadius": 4,
                    "color": "#151A25",
                    "height": 36,
                    "paddingLeft": 40,
                    "paddingRight": 10,
                    "width": "100%",
                  },
                ]
              }
              testID="text-input"
              underlineColorAndroid="transparent"
              value=""
            />
            <Image
              source={
                Object {
                  "canInstrument": true,
                  "createTransformer": [Function],
                  "getCacheKey": [Function],
                  "process": [Function],
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "left": 30,
                    "position": "absolute",
                    "width": 20,
                  },
                ]
              }
            />
          </View>
        </View>
        <ScrollView
          ListEmptyComponent={
            <Shared
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flex": 1,
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
            >
              No content
            </Shared>
          }
          data={Array []}
          disableVirtualization={false}
          horizontal={false}
          initialNumToRender={10}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "height": "100%",
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": "100%",
            }
          }
          testID="animated-flatlist"
          testObj={
            Object {
              "scrollY": 0,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "rgb(155,155,155)",
                  "fontSize": 14,
                }
              }
            >
              No content
            </Text>
          </View>
        </ScrollView>
      </View>
    </SafeAreaView>
  </View>
</View>
`;

exports[`[SearchUser] rendering test should render as expected 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "justifyContent": "center",
                "marginBottom": 4,
                "overflow": "hidden",
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 58,
                  "justifyContent": "center",
                  "paddingBottom": 0,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              defaultValue=""
              multiline={false}
              rejectResponderTermination={true}
              selectionColor="#151A25"
              style={
                Array [
                  Object {
                    "backgroundColor": "#f3f9ff",
                    "borderRadius": 4,
                    "color": "#151A25",
                    "paddingLeft": 40,
                    "paddingRight": 10,
                    "width": "100%",
                  },
                ]
              }
              testID="text-input"
              underlineColorAndroid="transparent"
              value=""
            />
            <Image
              source={
                Object {
                  "canInstrument": true,
                  "createTransformer": [Function],
                  "getCacheKey": [Function],
                  "process": [Function],
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "left": 30,
                    "position": "absolute",
                    "width": 20,
                  },
                ]
              }
            />
          </View>
        </View>
        <ScrollView
          ListEmptyComponent={
            <Shared
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "flex": 1,
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
            >
              No content
            </Shared>
          }
          data={Array []}
          disableVirtualization={false}
          horizontal={false}
          initialNumToRender={10}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          removeClippedSubviews={false}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "height": "100%",
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": "100%",
            }
          }
          testID="animated-flatlist"
          testObj={
            Object {
              "scrollY": 0,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "color": "rgb(155,155,155)",
                  "fontSize": 14,
                }
              }
            >
              No content
            </Text>
          </View>
        </ScrollView>
      </View>
    </SafeAreaView>
  </View>
</View>
`;
